[package]
name = "misscord"
description = "A Misskey antenna to Discord bridge."
authors = [
    "Lleyton Gray <lleyton@fyralabs.com>"
]
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
keywords = [
    "discord",
    "misskey"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
futures = "0.3.30"
misskey = { version = "0.2.0", features = ["13-13-2"], git = "https://github.com/poppingmoon/misskey-rs", branch = "feature/13.13.2" }
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
webhook = "2.1.2"
